--- a/day-4-peekbank.Rmd
+++ b/day-4-peekbank.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Day 3: CHILDES and childes-db'
+title: 'Day 4: Peekbank'
 author: "Mike Frank"
 date: "2023-01-10"
 output: html_document
